--- a/javascript/discussion-package/visit-profile-promo.handlebars
+++ b/javascript/discussion-package/visit-profile-promo.handlebars
@@ -1,8 +1,8 @@
 <div class="alert alert-info">
     <span class="close" data-dismiss="alert">&#215;</span>
-    <div><strong>Thanks for {{verb}}!</strong></div>
-    <div>You can view your public discussion history
-        <a class="alert-link" href="{{profileRoot}}discussion">on your
-        profile</a>.
+    <div><strong>Bedankt voor {{verb}}!</strong></div>
+    <div>Je kunt al je discussies terugzien op de pagina 
+        <a class="alert-link" href="{{profileRoot}}discussion">van je 
+        profiel</a>.
     </div>
 </div>
