--- a/javascript/discussion-package/vote-controls.handlebars
+++ b/javascript/discussion-package/vote-controls.handlebars
@@ -1,7 +1,7 @@
 <div class="vote_tools">
     <div class="control vote_tools_show" >
         <a href="#" class="control vote_for {{#if upVoted}}voted{{/if}}" 
-                title="Vote up, this is encouraging or helpful (click again to undo)"
+                title="Stem voor, dit is bemoedigend of nuttig (click nogmaals om stem ongedaan te maken)"
                 data-key="{{key}}"
                 data-vote-type="1">
             <img src="/images/vote-up-gray.png" class="vote_up_gray">
@@ -9,7 +9,7 @@
         </a>
         <div class="sum_votes">{{sumVotesIncremented}}</div>
         <a href="#" class="control vote_for {{#if downVoted}}voted{{/if}}"
-                title="Vote down, this is not encouraging or helpful (click again to undo)"
+                title="Stem tegen, dit is niet bemoedigend en niet nuttig (click nogmaals om stem ongedaan te maken)"
                 data-key="{{key}}"
                 data-vote-type="-1">
             <img src="/images/vote-down-gray.png" class="vote_down_gray">
