--- a/javascript/login-package/signup-success.handlebars
+++ b/javascript/login-package/signup-success.handlebars
@@ -6,7 +6,7 @@
         <img src="/images/hand-tree.png" class="tree">
         <div class="instructions">
             {{#if resendDetected }}
-                Controleer je ongewenste email als je het bericht niet kunt vinden in je inbox.
+                Controleer je spam folder als je het bericht niet kunt vinden in je inbox.
             {{else}}
                 Klik op de link in de email om je eigen Khan Academie gebruikersnaam en wachtwoord aan te maken.
             {{/if}}
