--- a/javascript/maps-package/knowledgemap-topic.handlebars
+++ b/javascript/maps-package/knowledgemap-topic.handlebars
@@ -1,11 +1,11 @@
 <div class="exercise-badge">
-	<span class="pan-to simple-button" data-id="name" style="display:none;"><img src="/images/map-target.png" title="Show in map" alt="Show in map"></span>
+	<span class="pan-to simple-button" data-id="name" style="display:none;"><img src="/images/map-target.png" title="Toon op kaart" alt="Toon op kaart"></span>
     <h4>
         <div class="topic-exercise-badge">
             <img class="topic-exercise-image" src="{{icon_url}}">
         </div>
 
-        <a href="{{url}}" title='Practice all problems in the  "{{standalone_title}}" topic.'>{{standalone_title}}</a>
+        <a href="{{url}}" title='Oefen alle problemen in  "{{standalone_title}}" topic.'>{{standalone_title}}</a>
 
     </h4>
 </div>
