--- a/javascript/profile-package/coaches.handlebars
+++ b/javascript/profile-package/coaches.handlebars
@@ -2,16 +2,16 @@
     Coaches have access to all of your Khan Academy data.
     <ul class="tabrow">
         <li>
-            Your student id is {{identifier}}
+            Jouw student id is {{identifier}}
         </li>
     </ul>
 </div>
 {{#if isMutable}}
 <div class="col1">
     <div class="coaches-section">
-        <h2>Add a coach</h2>
+        <h2>Voeg een coach toe</h2>
         <input id="coach-email" class="blur-on-esc" placeholder="Coach id" type="text">
-        <span id="add-coach" class="simple-button">Add coach</span>
+        <span id="add-coach" class="simple-button">Voeg coach toe</span>
         <img class="coach-throbber" style="display: none" src="/images/throbber.gif">
 
         <div class="notification error" style="display: none;"></div>
@@ -21,7 +21,7 @@
 
 <div class="col2">
     <div class="coaches-section">
-        <h2>Your coaches</h2>
+        <h2>Jouw coach</h2>
         <div id="coach-list-container"></div>
     </div>
 </div>
