--- a/javascript/profile-package/discussion-answers-suggestions.handlebars
+++ b/javascript/profile-package/discussion-answers-suggestions.handlebars
@@ -1,7 +1,7 @@
 {{#if hasWatchedVideos}}
-    Can you help answer questions on these videos?
+    Kun jij helpen met het beantwoorden van vragen gerelateerd aan deze video?
 {{else}}
-    Watch these videos and help answer questions:
+    Bekijk deze video en help met het beantwoorden van vragen:
 {{/if}}
 
 <div class="discussion-message-body">
