--- a/javascript/profile-package/avatar-picker.handlebars
+++ b/javascript/profile-package/avatar-picker.handlebars
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <a href="#" class="close-button close">x</a><h3>Choose Your Avatar</h3>
+    <a href="#" class="close-button close">x</a><h3>Kies je avatar</h3>
 </div>
 <div class="modal-body avatar-picker-contents">
 
@@ -22,7 +22,7 @@
     {{/if}}
     {{/each}}
 
-    <div class="category-title"><em>Coming Soon</em></div>
+    <div class="category-title"><em>Komt later...</em></div>
     <div class="category-section">
         <div class="category-avatars">
             <div class="avatar locked">
