--- a/javascript/profile-package/discussion-questions-suggestions.handlebars
+++ b/javascript/profile-package/discussion-questions-suggestions.handlebars
@@ -1,7 +1,7 @@
 {{#if hasWatchedVideos}}
-    Do you have any questions about these recently watched videos?
+   Heb jij vragen over deze recent bekeken video's?
 {{else}}
-    After you <a href="/#browse">watch a video</a>, you can ask questions related to it. You can start by watching some suggested videos for you:
+    Nadat je <a href="/#browse">de video bekeken hebt</a>, kun je gerelateerde vragen stellen. Je kunt beginnen met het bekijken van voorgestelde video's:
 {{/if}}
 
 <div class="discussion-message-body">
