--- a/javascript/profile-package/empty-badge-picker.handlebars
+++ b/javascript/profile-package/empty-badge-picker.handlebars
@@ -1,4 +1,4 @@
 <div class="empty-badge-picker">
-<div style="font-size:180%">No badges...yet!</div>
-<a href="/#browse">Watch a video</a> or <a href="/exercisedashboard">try an exercise</a> to earn your first badge.
+<div style="font-size:180%">Nog geen badges!</div>
+<a href="/#browse">Bekijk een video</a> of <a href="/exercisedashboard">probeer een oefening</a> om je eerste badge te verdienen.
 </div>
