--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -43,9 +43,9 @@
         {% endblock meta_facebook_tags %}
 
         {# Google+ -#}
-        <meta itemprop="name" content="Khan Academy">
-        <meta itemprop="description" content="Watch. Practice. Learn almost anything for free.">
-        <meta itemprop="image" content="http://www.khanacademy.org/images/khan-logo-vertical-transparent.png">
+        <meta itemprop="name" content="Khan Academie">
+        <meta itemprop="description" content="Kijk. Oefen. Learn almost anything for free.">
+        <meta itemprop="image" content="/images/khan-logo-vertical-transparent.png">
         {# End Google+ -#}
 
         <link rel="shortcut icon" href="/favicon.ico?leaf">
