--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
         <h1 class="section-headline pulls"><a href="/#browse" data-tag="Homepage Headline">Bekijk.</a> <a href="/exercisedashboard" data-tag="Homepage Headline">Oefen.</a></h1>
         <h1>Leer bijna alles; gratis!.</h1>
         <p>
-            Met verschillende video's over rekenen en wiskunde binnenkort ook taal en in de toekomst wellicht ook andere onderwerpen </a> zijn wij op een missie</a> om jou te helpen om alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wil en op je eigen tempo. 
+            Met verschillende video's over rekenen en wiskunde binnenkort ook taal en in de toekomst wellicht ook andere onderwerpen </a> zijn wij op een missie</a> om jou te helpen om alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in je eigen tempo. 
             
         <div>
             <a href="/#browse" data-tag="Homepage C2A" class="call-to-action simple-button green watch-a-video">Bekijk een video</a>
