--- a/stylesheets/donate-package/donate.css
+++ b/stylesheets/donate-package/donate.css
@@ -108,7 +108,7 @@
 	margin: 15px 0;
 }
 .ui-widget-content a {
-	color: #678D00;
+	color: #26008F;
 }
 
 /* Overrides to bootstrap grids for this page */
