--- a/stylesheets/exercises-package/stacks.less
+++ b/stylesheets/exercises-package/stacks.less
@@ -16,7 +16,7 @@
 }
 .card-type-endofstack .current-card-container-inner,
 .card-type-endofreview .current-card-container-inner {
-    background-color: #E9EFDD;
+    background-color: #DCEFEC;
 }
 
 .current-card-container,
@@ -110,8 +110,8 @@
      * classes to the end of stack card programatically. 
      * TODO (jasonrr): remove :last-child selector when that happens
      */
-    background-color: #E9EFDD;
-    .box-shadow(~"inset 0 0 0 2px white, inset 0 0 0 4px #E9EFDD");
+    background-color: #DCEFEC;
+    .box-shadow(~"inset 0 0 0 2px white, inset 0 0 0 4px #DCEFEC");
 }
 
 .exercises-stack,
@@ -192,7 +192,7 @@
     height: 5px;
     margin: 2px 0 0 2px;
     float: left;
-    background: #83a600;
+    background: #0084A8;
     color: transparent;
     border: 1px solid #a7b36b;
     position: relative;
@@ -236,7 +236,7 @@
 }
 
 .stack .leaves .leaf.earned {
-    background: #83a600;
+    background: #0084A8;
     border-color: #5a7300;
     color: transparent;
     box-shadow: none;
@@ -296,7 +296,7 @@
     background: transparent url('/images/power-mode/slit.png') no-repeat top left; /* data-uri('/images/power-mode/slit.png') */
 }
 .calculating-end-of-stack .card-pocket .slit-overlay {
-    background: #E9EFDD;
+    background: #DCEFEC;
     height: 30px;
     position: relative;
     top: -17px;
