--- a/stylesheets/scratchpads-package/style.less
+++ b/stylesheets/scratchpads-package/style.less
@@ -202,7 +202,7 @@ a.ui-button:visited:hover {
 }
 
 #explorations {
-    border-left: 1px solid #C6D1AD;
+    border-left: 1px solid #ADD1CA;
     left: -1px;
     margin-bottom: 36px;
 }
@@ -317,7 +317,7 @@ a.ui-button:visited:hover {
         padding: 0;
 
         .toolbar {
-            background: #70C448;
+            background: #4AAEC4;
             overflow: auto;
             position: relative;
             width: auto;
@@ -325,7 +325,7 @@ a.ui-button:visited:hover {
         }
 
         .toolbar.top-toolbar {
-            background: #70C448;
+            background: #4AAEC4;
         }
 
         .top-toolbar {
@@ -523,7 +523,7 @@ a.ui-button:visited:hover {
         .tip {
             background: white;
             border-radius: 5px;
-            border: 2px solid #70C448;
+            border: 2px solid #4AAEC4;
             color: black;
             display: block;
             left: 0px;
@@ -703,7 +703,7 @@ a.ui-button:visited:hover {
             }
 
             .ui-slider-range-min {
-                background: #678D00;
+                background: #26008F;
             }
         }
 
