--- a/stylesheets/shared-package/variables.less
+++ b/stylesheets/shared-package/variables.less
@@ -10,7 +10,7 @@
 
 // Links
 @linkColor:             #005987;
-@linkColorHover:        #678d00;
+@linkColorHover:        #26008F;
 
 // Grays
 @black:                 #000;
@@ -25,12 +25,12 @@
 
 // Accent colors
 @blueDark:				#2c3747;
-@green:					#76a005;
+@green:					#059E7B;
 @orange:				#bf4f04;
 
 // Exercise Colors
 @colorProficient:		#0080c9;
-@colorSuggested:		#73982c;
+@colorSuggested:		#2C7196;
 @colorReview:			#e35d04;
 @colorNotStarted:		#ccc;
 @colorStarted:			#c7e5f7;
@@ -43,8 +43,8 @@
 @textColor:             #444;
 
 // Buttons
-@primaryButtonBackground:	#89b908;
-@primaryButtonBorder:		#76a005;
+@primaryButtonBackground:	#088BBA;
+@primaryButtonBorder:		#059E7B;
 
 
 // COMPONENT VARIABLES
@@ -89,12 +89,12 @@
 @errorBackground:         #f2dede;
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
-@successText:             #468847;
-@successBackground:       #dff0d8;
+@successText:             #456587;
+@successBackground:       #D7EAEF;
 @successBorder:           darken(spin(@successBackground, -10), 5%);
 
 @infoText:                #4a7c17;
-@infoBackground:          #edf2df;
+@infoBackground:          #DEF2ED;
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
 
