--- a/templates/labs/template-slim.html
+++ b/templates/labs/template-slim.html
@@ -34,7 +34,7 @@
 
             .container-fluid .header {
                 background-color: #1d1f20;
-                border-bottom: 15px solid #70c448;
+                border-bottom: 15px solid #4AAEC4;
             }
 
             .container-fluid .header img {
