--- a/templates/labs/template.html
+++ b/templates/labs/template.html
@@ -33,7 +33,7 @@
             }
 
             .container-fluid > .sidebar {
-                background-color: #70C448;
+                background-color: #4AAEC4;
                 left: 0;
                 padding-left: 20px;
                 padding-right: 20px;
