--- a/templates/styleguide.html
+++ b/templates/styleguide.html
@@ -34,7 +34,7 @@
         <p>All links / list items on the video library are effectively styled <br><small>font: 12px/18px Helvetica Neue, Helvetica, Arial, sans-serif;</small>
         <ul>
           <li class="visited-no-recolor"><a href="./" onclick="javascript:return false;">Links are</a> <small>color: #005987;</small></a>
-          <li ><a href="./" onclick="javascript:return false;" onclick="javascript:return false;">Visited (and :hovered) Links are</a> <small>color: #678D00;</small></a>
+          <li ><a href="./" onclick="javascript:return false;" onclick="javascript:return false;">Visited (and :hovered) Links are</a> <small>color: #26008F;</small></a>
         </ul>
         <h2 class="section-headline">Buttons</h2>
         <div class="buttons">
