--- a/khan-exercises/css/khan-site.css
+++ b/khan-exercises/css/khan-site.css
@@ -1314,7 +1314,7 @@ article {
     background: #fff;
     position: relative;
     margin: 0 1px;
-    border-top: 1px solid #C6D1AD;
+    border-top: 1px solid #ADD1CA;
 }
 
 /* Basic typography for the entire site */
@@ -1324,7 +1324,7 @@ h1 {font-size:25px; margin-bottom: 22px;}
     .main-headline, .section-headline { padding-top: 22px; }
     .main-headline a, .section-headline a { text-decoration: none;}
     .main-headline a:hover, .section-headline a:hover { text-decoration: underline;}
-    .main-headline a:visited, .section-headline a:visited { color: #7EA800; }
+    .main-headline a:visited, .section-headline a:visited { color: #007EA8; }
     h1.main-headline {font-size: 32px; position: relative; line-height: 37px; z-index: 10;}
 
 h2 {font-size:20px; margin-bottom: 22px;}
@@ -1443,11 +1443,11 @@ a.visited-no-recolor:visited
 }
 
 a:visited {
-    color: #678D00;
+    color: #26008F;
 }
 
 a:link:hover, a:link:focus, a:visited:hover, a:visited:focus {
-    color: #678D00;
+    color: #26008F;
     text-decoration: underline;
 }
 
@@ -1486,7 +1486,7 @@ footer {
     footer.short {
         color: #555;
         background: url(http://www.khanacademy.org//images/light-page-bg.png) repeat-x 0 -30px;
-        border-top: 1px solid #C6D1AD;
+        border-top: 1px solid #ADD1CA;
         z-index: 10;
     }
     footer #leaves {
@@ -1659,7 +1659,7 @@ footer {
 .nav-subheader > span > a:visited:hover,
 .nav-subheader > span > a:visited:focus
 {
-    color: #263500;
+    color: #002533;
 }
 
 .nav-subheader > span > a.selected, #page_sub_nav a.selected {
@@ -1713,7 +1713,7 @@ footer {
         height: 0;
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
-        border-bottom: 6px solid #C6D1AD;
+        border-bottom: 6px solid #ADD1CA;
         left: 27px;
         position: absolute;
         top: 22px;
@@ -1852,8 +1852,8 @@ footer {
         vertical-align: middle;
     }
     .top-header-links span.separator, .nav-subheader span.separator {
-        border-left: 1px solid #C6D1AD;
-        border-right: 1px solid #E9EFDD;
+        border-left: 1px solid #ADD1CA;
+        border-right: 1px solid #DCEFEC;
         padding: 0;
         margin: 0 8px;
         display: inline-block;
@@ -1870,7 +1870,7 @@ footer {
     }
     .page_links span > a,
     .page_links span > a:hover {
-        color: #263500;
+        color: #002533;
     }
 
     .page_links span > a:hover {
@@ -1947,8 +1947,8 @@ footer {
     }
     .user-notification .icon:hover {
         background-image: url(http://www.khanacademy.org/"/images/discussions-hi-16px.png");
-        background-color: #89B908;
-        border: 1px solid #76A005;
+        background-color: #088BBA;
+        border: 1px solid #059E7B;
         background-position: 5px 9px;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
@@ -1970,7 +1970,7 @@ footer {
         -moz-box-shadow: 0 1px 0 #888;
         box-shadow: 0 1px 0 #888;
 
-        background-color: #357316;
+        background-color: #166474;
         color: #FFF;
 
         line-height: 13px;
@@ -1998,7 +1998,7 @@ footer {
 }
     .simple-input {
         background-color: #fafafa;
-        border:1px solid #C6D1AD;
+        border:1px solid #ADD1CA;
         font-size:10px;
         padding: 0;
         height: 24px;
@@ -2057,13 +2057,13 @@ footer {
         cursor: auto;
     }
     ul.ui-autocomplete .ui-menu-item a.ui-state-hover {
-        background: #89B908;
+        background: #088BBA;
         border: none;
         margin: 0;
         color: #fff;
     }
     ul.ui-autocomplete .ui-menu-item a.ui-state-hover .autocomplete-type {
-        background: #89B908;
+        background: #088BBA;
         border-color: transparent;
         color: #fff;
     }
@@ -2142,9 +2142,9 @@ nav {
     z-index: 20;
     background: #fff;
     color: #444;
-    border: 1px solid #C6D1AD;
+    border: 1px solid #ADD1CA;
     border-bottom: none;
-    border-top-color: #C6D1AD;
+    border-top-color: #ADD1CA;
     width: auto;
 }
     #page_sub_nav a {
@@ -2391,12 +2391,12 @@ span.youTube:hover {
             }
 
         .exercise-color.suggested {
-            background-color: #73982C;
+            background-color: #2C7196;
             color: #eee !important;
         }
 
             .exercise-color.suggested:hover {
-                background-color: #73982C;
+                background-color: #2C7196;
             }
 
         .exercise-color.review {
@@ -2835,7 +2835,7 @@ span.youTube:hover {
     }
 
     .achievement-badge .add-goal {
-        background-color: #89B908;
+        background-color: #088BBA;
         position: absolute;
         top: 7px;
         right: 14px;
@@ -3730,7 +3730,7 @@ span.youTube:hover {
 }
 
 #thumbnails td.selected div.thumb {
-    border: 2px solid #89B908;
+    border: 2px solid #088BBA;
 }
 
 #thumbnails td div.thumbnail_label {
@@ -3880,14 +3880,14 @@ ul.topic-browser-menu > li > ul > li > a {
 }
 #homepage .topic_browser {
     padding: 4px 10px;
-    background: #E9EFDD;
-    border: 1px solid #C6D1AD;
+    background: #DCEFEC;
+    border: 1px solid #ADD1CA;
     margin-bottom: 0;
 }
 #homepage .subtopic_browser {
     padding: 4px 10px;
     background: #F4F7EE;
-    border: 1px solid #C6D1AD;
+    border: 1px solid #ADD1CA;
     margin-bottom: 0;
 }
 #homepage .subtopic_browser .css-menu {
@@ -4330,7 +4330,7 @@ a.control:hover { color: #DD6900; }
     height:35px;
     text-align:center;
     vertical-align:middle;
-    border-bottom: 1px solid #76a005;
+    border-bottom: 1px solid #059E7B;
     outline:solid 1px #557303;
     color: #eee;
     position:fixed;
@@ -5385,10 +5385,10 @@ ul.inline-list, ul.inline-list li {
 }
 
 .goal a.objective:hover:before {
-    border-color: #89B908;
+    border-color: #088BBA;
 }
 .goal a.objective:hover {
-    border-color: #89B908 !important;
+    border-color: #088BBA !important;
 }
 
 .goal a.objective.video .objective-progress-meter,
@@ -5626,7 +5626,7 @@ input.goal-title:-moz-placeholder {
 }
 input.goal-title:focus {
     background-color: #FAFAFA;
-    border-color: #C6D1AD;
+    border-color: #ADD1CA;
     padding-left: 5px;
 }
 
@@ -5871,9 +5871,9 @@ a.simple-button.seethrough.goal-history {
 
 .goalpicker .newgoal:hover{
     z-index:10;
-    -webkit-box-shadow:0 0 6px 1px #678D00;
-    -moz-box-shadow:0 0 6px 1px #678D00;
-    box-shadow:0 0 6px 1px #678D00;
+    -webkit-box-shadow:0 0 6px 1px #26008F;
+    -moz-box-shadow:0 0 6px 1px #26008F;
+    box-shadow:0 0 6px 1px #26008F;
 }
 .goalpicker .newgoal.disabled:hover {
     -webkit-box-shadow: none;
@@ -5887,7 +5887,7 @@ a.simple-button.seethrough.goal-history {
 
 .goalpicker .newgoal:hover a,
 .goalpicker .info button {
-    color:#678D00;
+    color:#26008F;
 }
 
 .goalpicker .info button {
@@ -6188,8 +6188,8 @@ a.big-button:active > div {
 }
 .dropdown.open .dropdown-toggle {
   color: #ffffff;
-  background-color: #89b908;
-  border-color: #76a005;
+  background-color: #088BBA;
+  border-color: #059E7B;
   -webkit-border-top-right-radius: 5px;
   -webkit-border-bottom-right-radius: 0;
   -webkit-border-bottom-left-radius: 0;
@@ -6288,15 +6288,15 @@ a.big-button:active > div {
 .dropdown-menu.none-active > li:hover,
 .dropdown-menu.no-submenus > li:hover {
   text-decoration: none;
-  background-color: #89b908;
-  border-top: 1px solid #76a005;
-  border-bottom: 1px solid #76a005;
+  background-color: #088BBA;
+  border-top: 1px solid #059E7B;
+  border-bottom: 1px solid #059E7B;
   -webkit-transform: translate3d(0, 0, 0);
 }
 .dropdown-menu.child-active > li.hover-active > a,
 .dropdown-menu.none-active > li:hover > a,
 .dropdown-menu.no-submenus > li:hover > a {
-  text-shadow: 0 -1px 0 #76a005;
+  text-shadow: 0 -1px 0 #059E7B;
   color: #ffffff;
   font-weight: bold;
   text-decoration: none;
@@ -6451,7 +6451,7 @@ a.big-button:active > div {
 }
 .simple-button.green,
 .simple-button.primary {
-  border-color: #76a005 !important;
+  border-color: #059E7B !important;
   border-bottom-color: #526f03 !important;
   background-color: #7fac05;
   background-image: -moz-linear-gradient(top, #8aba08, #6e9700);
@@ -6482,7 +6482,7 @@ a.big-button:active > div {
 .simple-button.primary:active,
 .simple-button.green.active,
 .simple-button.primary.active {
-  background-color: #496400 \9;
+  background-color: #004B66 \9;
 }
 .simple-button.orange,
 .simple-button.warning {
@@ -6596,7 +6596,7 @@ a.big-button:active > div {
 }
 .lte8 .simple-button.green:active,
 .lte8 .simple-button.green.toggled {
-  background-color: #496400;
+  background-color: #004B66;
 }
 .lte8 .simple-button.orange:active,
 .lte8 .simple-button.orange.toggled {
@@ -7289,7 +7289,7 @@ a.big-button:active > div {
 }
 .card-type-endofstack .current-card-container-inner,
 .card-type-endofreview .current-card-container-inner {
-  background-color: #E9EFDD;
+  background-color: #DCEFEC;
 }
 .current-card-container,
 .current-card-container-inner {
@@ -7412,10 +7412,10 @@ a.big-button:active > div {
      * TODO (jasonrr): remove :last-child selector when that happens
      */
 
-  background-color: #E9EFDD;
-  -webkit-box-shadow: inset 0 0 0 2px white, inset 0 0 0 4px #E9EFDD;
-  -moz-box-shadow: inset 0 0 0 2px white, inset 0 0 0 4px #E9EFDD;
-  box-shadow: inset 0 0 0 2px white, inset 0 0 0 4px #E9EFDD;
+  background-color: #DCEFEC;
+  -webkit-box-shadow: inset 0 0 0 2px white, inset 0 0 0 4px #DCEFEC;
+  -moz-box-shadow: inset 0 0 0 2px white, inset 0 0 0 4px #DCEFEC;
+  box-shadow: inset 0 0 0 2px white, inset 0 0 0 4px #DCEFEC;
 }
 .exercises-stack,
 .exercises-card {
@@ -7491,7 +7491,7 @@ a.big-button:active > div {
   height: 5px;
   margin: 2px 0 0 2px;
   float: left;
-  background: #83a600;
+  background: #0084A8;
   color: transparent;
   border: 1px solid #a7b36b;
   position: relative;
@@ -7569,7 +7569,7 @@ a.big-button:active > div {
   -moz-opacity: 1;
 }
 .stack .leaves .leaf.earned {
-  background: #83a600;
+  background: #0084A8;
   border-color: #5a7300;
   color: transparent;
   box-shadow: none;
@@ -7627,7 +7627,7 @@ a.big-button:active > div {
 
 }
 .calculating-end-of-stack .card-pocket .slit-overlay {
-  background: #E9EFDD;
+  background: #DCEFEC;
   height: 30px;
   position: relative;
   top: -17px;
