--- a/stylesheets/bootstrap-package/bootstrap.css
+++ b/stylesheets/bootstrap-package/bootstrap.css
@@ -803,11 +803,11 @@ textarea[readonly] {
   border-color: #b94a48;
 }
 .control-group.success > label, .control-group.success .help-block, .control-group.success .help-inline {
-  color: #468847;
+  color: #456587;
 }
 .control-group.success input, .control-group.success select, .control-group.success textarea {
-  color: #468847;
-  border-color: #468847;
+  color: #456587;
+  border-color: #456587;
 }
 .control-group.success input:focus, .control-group.success select:focus, .control-group.success textarea:focus {
   border-color: #356635;
@@ -816,9 +816,9 @@ textarea[readonly] {
   box-shadow: 0 0 6px #7aba7b;
 }
 .control-group.success .input-prepend .add-on, .control-group.success .input-append .add-on {
-  color: #468847;
-  background-color: #dff0d8;
-  border-color: #468847;
+  color: #456587;
+  background-color: #D7EAEF;
+  border-color: #456587;
 }
 input:focus:required:invalid, textarea:focus:required:invalid, select:focus:required:invalid {
   color: #b94a48;
@@ -921,7 +921,7 @@ input:focus:required:invalid:focus, textarea:focus:required:invalid:focus, selec
 }
 .input-prepend .active, .input-append .active {
   background-color: #a9dba9;
-  border-color: #46a546;
+  border-color: #4675A4;
 }
 .input-prepend .add-on {
   *margin-top: 1px;
@@ -1909,14 +1909,14 @@ table .span12 {
 }
 .btn-success {
   background-color: #5bb75b;
-  background-image: -moz-linear-gradient(top, #62c462, #51a351);
-  background-image: -ms-linear-gradient(top, #62c462, #51a351);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-  background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-  background-image: -o-linear-gradient(top, #62c462, #51a351);
-  background-image: linear-gradient(top, #62c462, #51a351);
+  background-image: -moz-linear-gradient(top, #6494C4, #51a351);
+  background-image: -ms-linear-gradient(top, #6494C4, #51a351);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6494C4), to(#51a351));
+  background-image: -webkit-linear-gradient(top, #6494C4, #51a351);
+  background-image: -o-linear-gradient(top, #6494C4, #51a351);
+  background-image: linear-gradient(top, #6494C4, #51a351);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#51a351', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6494C4', endColorstr='#51a351', GradientType=0);
   border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
@@ -2140,11 +2140,11 @@ button.btn.small, input[type="submit"].btn.small {
   line-height: 18px;
 }
 .alert-success {
-  background-color: #dff0d8;
+  background-color: #D7EAEF;
   border-color: #d6e9c6;
 }
 .alert-success, .alert-success .alert-heading {
-  color: #468847;
+  color: #456587;
 }
 .alert-danger, .alert-error {
   background-color: #f2dede;
@@ -3187,7 +3187,7 @@ a.thumbnail:hover {
   background-color: #c67605;
 }
 .label-success {
-  background-color: #468847;
+  background-color: #456587;
 }
 .label-success:hover {
   background-color: #356635;
@@ -3271,7 +3271,7 @@ a.thumbnail:hover {
   transition: width 0.6s ease;
 }
 .progress-striped .bar {
-  background-color: #62c462;
+  background-color: #6494C4;
   background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
   background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -3309,18 +3309,18 @@ a.thumbnail:hover {
   background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-success .bar {
-  background-color: #5eb95e;
-  background-image: -moz-linear-gradient(top, #62c462, #57a957);
-  background-image: -ms-linear-gradient(top, #62c462, #57a957);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#57a957));
-  background-image: -webkit-linear-gradient(top, #62c462, #57a957);
-  background-image: -o-linear-gradient(top, #62c462, #57a957);
-  background-image: linear-gradient(top, #62c462, #57a957);
+  background-color: #5F8CB9;
+  background-image: -moz-linear-gradient(top, #6494C4, #5780A8);
+  background-image: -ms-linear-gradient(top, #6494C4, #5780A8);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6494C4), to(#5780A8));
+  background-image: -webkit-linear-gradient(top, #6494C4, #5780A8);
+  background-image: -o-linear-gradient(top, #6494C4, #5780A8);
+  background-image: linear-gradient(top, #6494C4, #5780A8);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#57a957', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6494C4', endColorstr='#5780A8', GradientType=0);
 }
 .progress-success.progress-striped .bar {
-  background-color: #62c462;
+  background-color: #6494C4;
   background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
   background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
