--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -55,7 +55,7 @@ article {
     background: #fff;
     position: relative;
     margin: 0 1px;
-    border-top: 1px solid #C6D1AD;
+    border-top: 1px solid #ADD1CA;
 }
 
 /* Basic typography for the entire site */
@@ -65,7 +65,7 @@ h1 {font-size:25px; margin-bottom: 22px;}
     .main-headline, .section-headline { padding-top: 22px; }
     .main-headline a, .section-headline a { text-decoration: none;}
     .main-headline a:hover, .section-headline a:hover { text-decoration: underline;}
-    .main-headline a:visited, .section-headline a:visited { color: #7EA800; }
+    .main-headline a:visited, .section-headline a:visited { color: #007EA8; }
     h1.main-headline {font-size: 32px; position: relative; line-height: 37px; z-index: 10;}
 
 h2 {font-size:20px; margin-bottom: 22px;}
@@ -184,11 +184,11 @@ a.visited-no-recolor:visited
 }
 
 a:visited {
-    color: #678D00;
+    color: #26008F;
 }
 
 a:link:hover, a:link:focus, a:visited:hover, a:visited:focus {
-    color: #678D00;
+    color: #26008F;
     text-decoration: underline;
 }
 
@@ -227,7 +227,7 @@ footer {
     footer.short {
         color: #555;
         background: url(/images/light-page-bg.png) repeat-x 0 -30px;
-        border-top: 1px solid #C6D1AD;
+        border-top: 1px solid #ADD1CA;
         z-index: 10;
     }
     footer #leaves {
@@ -399,7 +399,7 @@ footer {
 .nav-subheader > span > a:visited:hover,
 .nav-subheader > span > a:visited:focus
 {
-    color: #263500;
+    color: #002533;
 }
 
 .nav-subheader > span > a.selected, #page_sub_nav a.selected {
@@ -453,7 +453,7 @@ footer {
         height: 0;
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
-        border-bottom: 6px solid #C6D1AD;
+        border-bottom: 6px solid #ADD1CA;
         left: 27px;
         position: absolute;
         top: 22px;
@@ -592,8 +592,8 @@ footer {
         vertical-align: middle;
     }
     .top-header-links span.separator, .nav-subheader span.separator {
-        border-left: 1px solid #C6D1AD;
-        border-right: 1px solid #E9EFDD;
+        border-left: 1px solid #ADD1CA;
+        border-right: 1px solid #DCEFEC;
         padding: 0;
         margin: 0 8px;
         display: inline-block;
@@ -610,7 +610,7 @@ footer {
     }
     .page_links span > a,
     .page_links span > a:hover {
-        color: #263500;
+        color: #002533;
     }
 
     .page_links span > a:hover {
@@ -689,8 +689,8 @@ footer {
     }
     .user-notification .icon:hover {
         background-image: url("/images/discussions-hi-16px.png");
-        background-color: #89B908;
-        border: 1px solid #76A005;
+        background-color: #088BBA;
+        border: 1px solid #059E7B;
         background-position: 5px 9px;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
@@ -712,7 +712,7 @@ footer {
         -moz-box-shadow: 0 1px 0 #888;
         box-shadow: 0 1px 0 #888;
 
-        background-color: #357316;
+        background-color: #166474;
         color: #FFF;
 
         line-height: 13px;
@@ -740,7 +740,7 @@ footer {
 }
     .simple-input {
         background-color: #fafafa;
-        border:1px solid #C6D1AD;
+        border:1px solid #ADD1CA;
         font-size:10px;
         padding: 0;
         height: 24px;
@@ -799,13 +799,13 @@ footer {
         cursor: auto;
     }
     ul.ui-autocomplete .ui-menu-item a.ui-state-hover {
-        background: #89B908;
+        background: #088BBA;
         border: none;
         margin: 0;
         color: #fff;
     }
     ul.ui-autocomplete .ui-menu-item a.ui-state-hover .autocomplete-type {
-        background: #89B908;
+        background: #088BBA;
         border-color: transparent;
         color: #fff;
     }
@@ -884,9 +884,9 @@ nav {
     z-index: 20;
     background: #fff;
     color: #444;
-    border: 1px solid #C6D1AD;
+    border: 1px solid #ADD1CA;
     border-bottom: none;
-    border-top-color: #C6D1AD;
+    border-top-color: #ADD1CA;
     width: auto;
 }
     #page_sub_nav a {
@@ -1121,12 +1121,12 @@ span.youTube:hover {
             }
 
         .exercise-color.suggested {
-            background-color: #73982C;
+            background-color: #2C7196;
             color: #eee !important;
         }
 
             .exercise-color.suggested:hover {
-                background-color: #73982C;
+                background-color: #2C7196;
             }
 
         .exercise-color.review {
@@ -1565,7 +1565,7 @@ span.youTube:hover {
     }
 
     .achievement-badge .add-goal {
-        background-color: #89B908;
+        background-color: #088BBA;
         position: absolute;
         top: 7px;
         right: 14px;
@@ -2460,7 +2460,7 @@ span.youTube:hover {
 }
 
 #thumbnails td.selected div.thumb {
-    border: 2px solid #89B908;
+    border: 2px solid #088BBA;
 }
 
 #thumbnails td div.thumbnail_label {
@@ -2610,14 +2610,14 @@ ul.topic-browser-menu > li > ul > li > a {
 }
 #homepage .topic_browser {
     padding: 4px 10px;
-    background: #E9EFDD;
-    border: 1px solid #C6D1AD;
+    background: #DCEFEC;
+    border: 1px solid #ADD1CA;
     margin-bottom: 0;
 }
 #homepage .subtopic_browser {
     padding: 4px 10px;
     background: #F4F7EE;
-    border: 1px solid #C6D1AD;
+    border: 1px solid #ADD1CA;
     margin-bottom: 0;
 }
 #homepage .subtopic_browser .css-menu {
@@ -3060,7 +3060,7 @@ a.control:hover { color: #DD6900; }
     height:35px;
     text-align:center;
     vertical-align:middle;
-    border-bottom: 1px solid #76a005;
+    border-bottom: 1px solid #059E7B;
     outline:solid 1px #557303;
     color: #eee;
     position:fixed;
