--- a/stylesheets/socrates-package/timebar.less
+++ b/stylesheets/socrates-package/timebar.less
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@labsGreen:         #70C448;
+@labsGreen:         #4AAEC4;
 @correctColor:      @labsGreen;
 @iconBorder:        @labsGreen;
 
