--- a/stylesheets/shared-package/buttons.less
+++ b/stylesheets/shared-package/buttons.less
@@ -55,7 +55,7 @@
         border-color: @green !important;
         border-bottom-color: darken(@green, 10%) !important;
 
-        .buttonBackground(#8aba08, #6e9700);
+        .buttonBackground(#088BBA, #007099);
 
         color: @white !important;
         text-shadow:  0 -1px 0 darken(@green, 10%);
@@ -142,7 +142,7 @@
 
     &.green:active,
     &.green.toggled {
-        background-color: darken(#6e9700, 10%);
+        background-color: darken(#007099, 10%);
     }
 
     &.orange:active,
