--- a/stylesheets/shared-package/skillbar.less
+++ b/stylesheets/shared-package/skillbar.less
@@ -29,7 +29,7 @@
     #gradient > .vertical(#ddd, #ccc);
 }
 .skill-bar .fill.green {
-    #gradient > .vertical(#8aba08, #6e9700);
+    #gradient > .vertical(#088BBA, #007099);
 }
 .skill-bar .fill.blue {
     #gradient > .vertical(lighten(#0080C9, 10%), #0080C9);
