--- a/stylesheets/shared-package/variables.less
+++ b/stylesheets/shared-package/variables.less
@@ -25,7 +25,7 @@
 
 // Accent colors
 @blueDark:				#2c3747;
-@green:					#059E7B;
+@green:					#05759E;
 @orange:				#bf4f04;
 
 // Exercise Colors
@@ -44,7 +44,7 @@
 
 // Buttons
 @primaryButtonBackground:	#088BBA;
-@primaryButtonBorder:		#059E7B;
+@primaryButtonBorder:		#05759E;
 
 
 // COMPONENT VARIABLES
