--- a/stylesheets/profile-package/profile.css
+++ b/stylesheets/profile-package/profile.css
@@ -1166,7 +1166,7 @@ li.profile-tab {
 .user-profile-controls .dropdown-toggle:hover {
     background-color: #088BBA;
     color: #FFF;
-    border: 1px solid #05759E;
+    border: 1px solid #059E7B;
 }
 .user-profile-controls .dropdown-menu {
     width: 153px;
