--- a/khan-exercises/css/khan-exercise.css
+++ b/khan-exercises/css/khan-exercise.css
@@ -145,7 +145,7 @@ body.debug .graphie { outline: 1px dashed red; }
 #answer_area input.simple-button[disabled=disabled] { opacity: 0.5; filter: alpha(opacity = 50); cursor: default; }
 #answer_area input.simple-button[disabled=disabled]:hover { color: #fff !important; }
 #answer_area input.simple-button.orange[disabled=disabled]:hover { border-color: #bf4f04 !important; border-bottom-color: #803503 !important; }
-#answer_area input.simple-button.green[disabled=disabled]:hover { border-color: #05759E !important; border-bottom-color: #557303 !important; }
+#answer_area input.simple-button.green[disabled=disabled]:hover { border-color: #059E7B !important; border-bottom-color: #557303 !important; }
 
 .simple-button.disabled { opacity: 0.5; filter: alpha(opacity = 50); cursor: default; }
 
