--- a/stylesheets/shared-package/skillbar.less
+++ b/stylesheets/shared-package/skillbar.less
@@ -1,12 +1,12 @@
+
 .skill-bar {
     margin-bottom: 15px;
     height: 15px;
     padding: 0px;
     position: relative;
     border: 1px solid #bbb;
-
     .border-radius(4px);
-    .box-shadow(inset 0 0 4px rgba(0,0,0,0.3);
+    .box-shadow(inset 0 0 4px rgba(0,0,0,0.3));
 }
 .skill-bar .description {
     position: relative;
