--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
         <h1 class="section-headline pulls"><a href="/#browse" data-tag="Homepage Headline">Bekijk.</a> <a href="/exercisedashboard" data-tag="Homepage Headline">Oefen.</a></h1>
         <h1>Leer bijna alles; gratis!</h1>
         <p>
-            <b><i>Vanaf heden is de vernieuwde omgeving van Khan Academie actief. Deelnemers die reeds actief waren op de oude site kunnen deze nog steeds bereiken op: <a href="http://oud.khanacademie.nl">oud.khanacademie.nl</a>
+            <b><i>Vanaf nu is de vernieuwde omgeving van Khan Academie actief. Deelnemers die reeds actief waren op de oude site kunnen deze nog steeds bereiken op: <a href="http://oud.khanacademie.nl">oud.khanacademie.nl</a>
             Deze site wordt echter niet meer up-to-date gehouden, daarom raden wij jullie aan om zo snel mogelijk over te stappen naar de nieuwe omgeving.</i></b><br><br>
             
             Met verschillende video's over rekenen en wiskunde binnenkort ook taal en in de toekomst wellicht ook andere onderwerpen zijn wij op een missie om jou te helpen om alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in je eigen tempo. 
