Like button for khanacademie.nl

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -52,6 +52,9 @@
                     <td class="social-action">
                         <g:plusone size="medium" href="http://www.khanacademie.nl"></g:plusone>
                     </td>
+                    <td class="social-action">
+			<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.khanacademie.nl&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=arial&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
+                    </td>
                 </tr>
                 <tr>
                     {#
