Like button points to the facebook khanacademie page

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -33,8 +33,8 @@
         <meta property="fb:admins" content="100004182250626"/> 
         <meta property="og:site_name" content="Khan Academie"/>
         {% block meta_facebook_tags %}
-        <meta property="og:url" content="http://www.khanacademie.nl"/>
-        <meta property="og:type" content="non_profit"/>
+        <meta property="og:url" content="http://www.facebook.com/khanacademie"/>
+        <meta property="og:type" content="page"/>
         <meta property="og:title" content="Khan Academie"/>
         <meta property="og:description"
               content="With a library of over 3,000 videos covering everything from arithmetic to physics, finance, and history and hundreds of skills to practice, we're on a mission to help you learn what you want, when you want, at your own pace."/>
